# Frontier

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  architecture.md  examples.md  index.md  installation.md  quickstart.md
src/frontier/: __init__.py
src/frontier/adapters/: yfinance_client.py
src/frontier/api/: main.py
src/frontier/core/: optimizer.py
src/frontier_api/adapters/: yfinance_client.py
src/frontier_api/api/: main.py
src/frontier_api/core/: optimizer.py
tests/: test_adapters.py  test_api.py  test_full_workflow.py  test_isolation.py  test_optimizer.py
