[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-quant"
version = "0.1.2"
description = "Stateless, high-performance Mean-Variance portfolio optimization engine."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Pratham Mishra", email = "prathammishra1729@gmail.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "portfolio-optimization",
    "quantitative-finance",
    "efficient-frontier",
    "markowitz",
    "portfolio-management",
    "finance",
    "optimization"
]

# Core dependencies — always installed.
# Optional extras (data, server) are NEVER included here.
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]

# Market data adapter — adds Yahoo Finance support.
# pip install frontier-quant[data]
data = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
]

# HTTP server — adds FastAPI + Uvicorn.
# pip install frontier-quant[server]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

# Developer toolchain — test runners, linters, type checkers, stubs.
# pip install frontier-quant[dev]
# NOT intended for production or end-user installs.
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
    "pandas-stubs",
    "scipy-stubs",
]

# Full runtime — all production extras combined (data + server).
# Does NOT include dev tools.
# pip install frontier-quant[all]
all = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/Pratham-Mishra225/frontier-api"
Repository = "https://github.com/Pratham-Mishra225/frontier-api"
Issues = "https://github.com/Pratham-Mishra225/frontier-api/issues"
Changelog = "https://github.com/Pratham-Mishra225/frontier-api/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "network: marks tests that require a live internet connection (Yahoo Finance)",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true
